--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,10 @@
     "start": "vite"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.0.2",
+    "@mui/styled-engine": "^7.0.2",
     "gh-pages": "^6.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
